--- a/impute-1-joblib-spark-public.ipynb
+++ b/impute-1-joblib-spark-public.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "debugging = False\n",
-    "real_impute_NOT_param_estimate = True\n",
+    "real_impute_NOT_param_estimate = False\n",
     "use_spark = True # otherwise, will use joblib"
    ]
   },
@@ -1928,7 +1928,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
