removed dated comments

--- a/impute-1-joblib-spark-public.ipynb
+++ b/impute-1-joblib-spark-public.ipynb
@@ -1193,7 +1193,7 @@
     "    history_max_left_index_array  = history_instance_index_array[:one_side_span]\n",
     "    history_max_right_index_array = history_instance_index_array[-one_side_span:]\n",
     "    \n",
-    "    #TODO: delete missing, if any\n",
+    "    # delete missing, if any\n",
     "    max_left_index_non_missing_logic_array = np.logical_and(main_data_a[query_max_left_index_array] >= 0, main_data_a[history_max_left_index_array] >= 0)\n",
     "    max_right_index_non_missing_logic_array = np.logical_and(main_data_a[query_max_right_index_array] >= 0, main_data_a[history_max_right_index_array] >= 0)\n",
     "    query_max_left_index_array  = query_max_left_index_array[max_left_index_non_missing_logic_array][-one_d:]\n",
@@ -1300,7 +1300,6 @@
     "            \n",
     "    # train\n",
     "    for one_d in d_range:\n",
-    "        #distance_listing = Parallel(n_jobs=parallel_job_nr)(delayed(distance_ed_extend)(query_index_array_w_predict, row_index, one_d) for row_index in range(0, history_instance_index_array_listing.shape[0]))\n",
     "        distance_listing = np.empty(shape=(0, 0))\n",
     "        for row_index in range(0, history_instance_index_array_listing.shape[0]):\n",
     "            if(distance_index == 0):\n",
@@ -1313,12 +1312,7 @@
     "                one_distance = distance_ed_extended_weighted_sensitive(query_index_array_w_predict, row_index, one_d)\n",
     "            distance_listing = np.append(distance_listing, one_distance)\n",
     "        \n",
-    "        #TO-IMPROVE: append (train_index,effective_left_gap,effective_right_gap) # each train-instance / each (row & train-instance)\n",
-    "        #distance_listing_big = np.array(distance_listing) * 10000 # dist is around 0.x ~ 1.x\n",
-    "        #reserved_col_0 = history_instance_index_array_listing[:,0]\n",
-    "        #np.save('/tmp/reserved_col_0.npy', reserved_col_0)\n",
-    "        #history_instance_index_array_listing[:,0] = np.round(distance_listing_big) # otherwise will be truncated to lower int values.\n",
-    "        # OBS: above convert is not considering big distance values caused overflow.\n",
+    "        # TO-IMPROVE: append (train_index,effective_left_gap,effective_right_gap) # each train-instance / each (row & train-instance)\n",
     "        \n",
     "        for one_v in v_range:\n",
     "            #select the fist related shifts from top history_instance_index_array_listing\n",
@@ -1327,22 +1321,21 @@
     "            nr_rows_for_v = nr_shifts_for_v * nr_comparable_seasons\n",
     "            selected_neighbours_for_v = history_instance_index_array_listing[:nr_rows_for_v]\n",
     "            selected_distance_for_v = distance_listing[:nr_rows_for_v]\n",
-    "            #sort by dist. #TO-IMPROVE: for-each type of dist\n",
+    "            # sort by dist. #TO-IMPROVE: for-each type of dist\n",
     "            selected_neighbours_for_v = selected_neighbours_for_v[selected_distance_for_v.argsort()]\n",
     "            prediction_indexes_of_nearest_neighbours_max_k = selected_neighbours_for_v[:,-1]\n",
     "            \n",
     "            for one_k in k_range:\n",
     "                prediction_indexes_of_nearest_neighbours_one_k = prediction_indexes_of_nearest_neighbours_max_k[:one_k]\n",
-    "                #TO-IMPROVE (weighted) avg as predict\n",
+    "                # TO-IMPROVE (weighted) avg as predict\n",
     "                predictions_of_nearest_neighbours = main_data_a[prediction_indexes_of_nearest_neighbours_one_k]\n",
     "                prediction = np.mean(predictions_of_nearest_neighbours)\n",
-    "                #measure predicted err (original err, can calculate MAE/RMSE later)\n",
+    "                # measure predicted err (original err, can calculate MAE/RMSE later)\n",
     "                err = prediction - one_train_ground_truth\n",
-    "                #append (train_index,k,d,v,err) to all_train_results #TO-IMPROVE: 1 col for dist type\n",
+    "                # append (train_index,k,d,v,err) to all_train_results #TO-IMPROVE: 1 col for dist type\n",
     "                one_point_result = np.hstack((one_train_index, one_k, one_d, one_v, err))\n",
     "                one_point_all_tuples_result_listing = np.vstack((one_point_all_tuples_result_listing, one_point_result))\n",
-    "        #reserved_col_0 = np.load('/tmp/reserved_col_0.npy')\n",
-    "        #history_instance_index_array_listing[:,0] = reserved_col_0\n",
+    "                \n",
     "    one_point_all_tuples_result_listing = one_point_all_tuples_result_listing[1:]\n",
     "    main_data_a[one_train_index] = one_train_ground_truth\n",
     "    return(one_point_all_tuples_result_listing)"
@@ -1387,7 +1380,6 @@
     "if(use_spark):\n",
     "    max_allowed_query_one_side_extend_sc_bc = sc.broadcast(max_allowed_query_one_side_extend)\n",
     "    nr_complete_seasons_sc_bc = sc.broadcast(nr_complete_seasons)\n",
-    "    #one_side_span_sc_bc = sc.broadcast(one_side_span)\n",
     "\n",
     "if(debugging):\n",
     "    if(not use_spark):\n",
